# deicsonze

./: CMakeLists.txt  README.md
cmake-modules/: FindLVTK.cmake
src/: CMakeLists.txt  dssideicsonze.cpp  dssideicsonze.hpp  vstdeicsonze.cpp  vstdeicsonze.hpp
src/deicsonze/: CMakeLists.txt  common_defs.h  deicsonze.cpp  deicsonze.h  deicsonzefilter.cpp  deicsonzefilter.h  deicsonzeplugin.cpp  deicsonzeplugin.h  deicsonzepreset.cpp  deicsonzepreset.h
